--- a/notes/ml-notes/支持向量机.md
+++ b/notes/ml-notes/支持向量机.md
@@ -15,3 +15,13 @@
 根据重要性质2，如果在当前维度不能把样本分类，则需要借助更高维度的空间对样本做分类。假设有映射函数$x'=f(x)$把向量$x$映射到更高维的空间，并变成向量$x'$，把映射的向量代入对偶表达式，发现需要求向量$f(x_i)^{T}f(x_j)$的内积，这个开销会非常大。假设有一个函数$g(x_{i},x_{j})=f(x_i)^{T}f(x_j)$可以使用原向量就把内积求出来，那么开销就减小了很多。
 
 我们定义$g(x_{i},x_{j})$为核函数。它隐式地定义了映射函数$f(x)$，让我们不需要具体的映射函数就可以在更高维解决支持向量机的划分问题。
+
+### 软间隔
+
+第一部分叙述的SVM是硬间隔的，要求所有的样本都在+-1界限之外。软间隔则允许样本有一定的概率出错，以减轻过拟合。所以目标式子就变成了：$\frac{1}{2}||w||+C\sum_{i=1}^{m}max(0,1-y_{i}(w^{T}x_{i}+b))$
+
+这个公式的意思是，如果分类正确（分类结果大于等于1），则不参与损失函数的累加；否则需要参与。注：这个公式采用了hinge损失函数。
+
+这个目标函数的求解一样可以使用KKT条件，最后的取值仅与支持向量有关。
+
+TODO: 数学推导需要加到文档中，具体过程见chatgpt聊天记录。
